<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">HalloApp</string>
    <string name="app_name_katchup">Katchup</string>
    <string name="title_home">Home</string>
    <string name="title_messages">Chats</string>
    <string name="title_camera">Camera</string>
    <string name="title_profile">Profile</string>
    <string name="title_groups">Groups</string>
    <string name="title_magic_post">Magic posts</string>
    <string name="comment">Comment</string>
    <string name="next">Next</string>
    <string name="next_lowercase">next</string>
    <string name="accept_permission">Accept</string>
    <string name="message">Message</string>
    <string name="add_post">Add post</string>
    <string name="new_chat">New chat</string>
    <string name="new_group">New group</string>
    <string name="notifications">Notifications</string>
    <string name="post_fab_label">Post</string>
    <string name="new_group_fab_label">New group</string>
    <string name="compose_fab_label">Compose</string>
    <string name="add_to_contacts">Add to contacts</string>
    <string name="accept_message">Accept message</string>
    <string name="not_in_address_book_alert">This person is not in your address book</string>
    <string name="moments_notifications_channel_name">Moments notifications</string>
    <string name="feed_notifications_channel_name">Feed notifications</string>
    <string name="magic_post_notifications_channel_name">Magic post notifications</string>
    <string name="message_notifications_channel_name">Message notifications</string>
    <string name="critical_notifications_channel_name">Critical app alerts</string>
    <string name="broadcast_notifications_channel_name">Alerts from HalloApp</string>
    <string name="invite_notifications_channel_name">Invite notifications</string>
    <string name="missed_call_notifications_channel_name">Missed call notifications</string>
    <string name="invite_notification_text">%s just accepted your invite to join HalloApp 🎉</string>
    <string name="who_else_to_invite">Who else do you want to see here?</string>
    <string name="me">Me</string>
    <string name="you">you</string>
    <string name="forward_title">Forward</string>
    <string name="camera_post">Camera</string>
    <string name="group_post_expiry_title">Expire content</string>
    <string name="expiration_day">24 hours</string>
    <string name="expiration_month">30 days</string>
    <string name="expiration_never">Never</string>
    <string name="gallery_post">Gallery</string>
    <string name="attachment_contact">Contact</string>
    <string name="view_contact_card_title">Contact</string>
    <string name="attachment_document">Document</string>
    <string name="text_post">Text</string>
    <string name="voice_post">Audio</string>
    <string name="bad_image">Unsupported media type</string>
    <string name="wrong_number">Wrong number?</string>
    <string name="register_success">You\'re in!</string>
    <string name="name_username_entry_title">Enter your name and select a username</string>
    <string name="add_optional_photo">Add optional photo</string>
    <string name="time_diff_now">Now</string>
    <string name="slide_to_cancel">slide to cancel</string>
    <string name="phone_number_hint">Phone number</string>
    <string name="delete_account_title">Delete account</string>
    <string name="delete_my_account_action">Delete my account</string>
    <string name="delete_account_button">Delete</string>
    <string name="delete_account_note">This cannot be undone.</string>
    <string name="delete_account_failed">Failed to delete account</string>
    <string name="settings_account">Account</string>
    <string name="request_data_title">Request my data</string>
    <string name="request_data_button">Request data</string>
    <string name="data_available_at">Data will be available on %s</string>
    <string name="export_data_explanation">Download a copy of all your user data stored on HalloApp\'s servers. This does not contain message or post content.</string>
    <string name="request_export_data_failed">Request failed</string>
    <string name="export_account_data">Export my data</string>
    <string name="request_registration_title">Welcome!</string>
    <string name="phone_entry_title">What is your phone number?</string>
    <string name="phone_number_entry_rationale">Your phone number is how you find your friends on HalloApp, and how they find you!</string>
    <string name="your_contacts_title">Your contacts</string>
    <string name="get_started">Get started!</string>
    <string name="reverify_registration_title">Please, re-verify your phone number</string>
    <string name="request_registration_subtitle">You will receive a verification code.\nCarrier rates may apply.</string>
    <string name="verify_registration_title">Enter the code we sent to\n%s</string>
    <string name="contact_permission_title">One last thing</string>
    <string name="registration_code_invalid">Invalid registration code, try again</string>
    <string name="registration_failed">Failed to register, please try again</string>
    <string name="registration_failed_no_friends">We are currently invite only. If you have a friend or family member who uses HalloApp, ask them to invite you using your phone number.</string>
    <string name="registration_failed_no_friends_title">Shucks!</string>
    <string name="registration_sms_retry_progress">Requesting new SMS code…</string>
    <string name="registration_phone_code_progress">Requesting code via phone call…</string>
    <string name="resend_sms">Resend SMS Code</string>
    <string name="request_call">Request a Call</string>
    <string name="type_a_message_hint">Type a message</string>
    <string name="write_a_description">Write a description</string>
    <string name="write_a_post">Write a post</string>
    <string name="send">Send</string>
    <string name="set_avatar_done">Done</string>
    <string name="set_avatar_reset">Reset</string>
    <string name="invite_card_search_text">Search for more friends and family</string>
    <string name="invite_card_header">HalloApp is fun with friends and family</string>
    <string name="new_lowercase">new</string>
    <string name="new_post">New post</string>
    <string name="tap_to_return_to_call">Tap to return to call</string>
    <string name="log_missed_voice_call">Missed voice call</string>
    <string name="log_missed_video_call">Missed video call</string>
    <string name="log_unanswered_voice_call">Unanswered voice call</string>
    <string name="log_unanswered_video_call">Unanswered video call</string>
    <string name="log_voice_call">Voice call</string>
    <string name="log_voice_call_with_duration">Voice call (%s)</string>
    <string name="log_video_call">Video call</string>
    <string name="log_video_call_with_duration">Video call (%s)</string>
    <string name="storage_usage_title">Storage usage</string>
    <string name="storage_usage_home">Home feed</string>
    <string name="storage_usage_chats">Chats</string>
    <string name="storage_usage_groups">Groups</string>
    <string name="storage_usage_internal">Other</string>
    <string name="storage_usage_archive">Archive</string>
    <string name="home_contact_permissions_banner">To better connect with your friends &amp; family and see their posts, allow HalloApp to access your contacts</string>
    <string name="new_post_contact_permissions_banner">To better share posts with your friends &amp; family, allow HalloApp access to your contacts</string>
    <string name="new_message">New message</string>
    <string name="chat_message_attribution">%1$s: %2$s</string>
    <string name="empty_chat_with_name_placeholder">%s is on HalloApp.</string>
    <string name="new_chat_name_placeholder">%s is using HalloApp! 🎉</string>
    <string name="posts_empty">Posts will appear here</string>
    <string name="posts_exchange_numbers">To connect you must exchange phone numbers</string>
    <string name="home_page_empty">Posts from your friends will appear here</string>
    <string name="chats_page_empty">Contacts and messages will appear here</string>
    <string name="chats_search_empty">No chats found for \'%s\'</string>
    <string name="groups_page_empty">Your groups will appear here</string>
    <string name="groups_search_empty">No groups found for \'%s\'</string>
    <string name="groups_in_common_empty">You have no groups in common</string>
    <string name="continue_button">Continue</string>
    <string name="reply">Reply</string>
    <string name="send_logs">Share feedback &amp; logs</string>
    <string name="terms_of_service">Terms of service</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="settings_block_list">Blocked friends</string>
    <string name="settings_feed_privacy">Posts</string>
    <string name="settings_privacy">Privacy</string>
    <string name="help">Help</string>
    <string name="notify_posts">Posts</string>
    <string name="notify_comments">Comments</string>
    <string name="rotate">Rotate</string>
    <string name="block">Block</string>
    <string name="refresh_contacts">Refresh contacts</string>
    <string name="activity">Activity</string>
    <string name="delete">Delete</string>
    <string name="clear_chat">Clear chat</string>
    <string name="view_safety_number">View safety number</string>
    <string name="search">Search</string>
    <string name="action_clear_search">Clear</string>
    <string name="action_add">Add</string>
    <string name="invite_friends">Invite friends &amp; family</string>
    <string name="flip">Flip</string>
    <string name="call_action_voice">Voice call</string>
    <string name="call_action_video">Video call</string>
    <string name="crop">Crop</string>
    <string name="draw">Draw</string>
    <string name="toggle_annotate">Annotate</string>
    <string name="title_report">report</string>
    <string name="report_select_reason">select reason</string>
    <string name="report_button">report</string>
    <string name="report_cancel_button">cancel</string>
    <string name="report_reason_dont_like">i don\'t like it</string>
    <string name="report_reason_spam">it\'s spam</string>
    <string name="report_reason_violates_rules">it violates katchup rules</string>
    <string name="report_reason_other">something else</string>
    <string name="settings_account_option">my account</string>
    <string name="settings_notifications_option">notifications</string>
    <string name="settings_privacy_option">privacy</string>
    <string name="settings_help_option">help</string>
    <string name="settings_feedback_option">send feedback</string>
    <string name="settings_share_katchup_option">share katchup 🍟</string>
    <string name="settings_developer_option">developer tools</string>
    <string name="settings_notifications_reactions_option">reactions</string>
    <string name="settings_notifications_mentions_option">mentions</string>
    <string name="settings_notifications_on_fire_option">on fire</string>
    <string name="settings_notifications_new_users_option">new users</string>
    <string name="settings_notifications_someone_follows_option">someone follows you</string>
    <string name="copy">Copy</string>
    <string name="friendship_model_title">New friendship model on HalloApp</string>
    <string name="friendship_model_description">Now you can search for people on HalloApp using their name or @username. Your existing HalloApp contacts now become your friends. You can remove existing contacts from friends at any time.</string>
    <string name="social_media_nux_title">Enhance your profile with your social media links</string>
    <string name="social_media_nux_description">To add your social media handles, go to your Profile, tap on the “Add my social media” button, then tap “Add more” and chose which accounts you want to add.</string>
</resources>