<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/notifications">

        <SwitchPreferenceCompat
            app:key="notify_posts"
            app:title="@string/notify_posts"
            app:defaultValue="true"/>

        <SwitchPreferenceCompat
            app:key="notify_comments"
            app:title="@string/notify_comments"
            app:defaultValue="true"/>


    </PreferenceCategory>

    <PreferenceCategory app:title="@string/settings_privacy">

        <Preference app:key="block_list"
            app:title="@string/settings_block_list"/>

        <Preference app:key="feed_privacy"
            app:title="@string/settings_feed_privacy"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/help">

        <Preference
            app:key="invite_friends"
            app:title="@string/invite_a_friend"/>

        <Preference
            app:key="privacy_policy"
            app:title="@string/privacy_policy" />

        <Preference
            app:key="terms_of_service"
            app:title="@string/terms_of_service" />

        <SwitchPreferenceCompat
            app:key="use_debug_host"
            app:title="Use debug host"
            app:defaultValue="false"
            app:isPreferenceVisible="false" />

        <Preference
            app:key="debug"
            app:title="DEBUG"
            app:isPreferenceVisible="false" />

        <Preference
            app:key="send_logs"
            app:title="@string/send_logs" />

    </PreferenceCategory>

</PreferenceScreen>
