<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/notifications"
        android:icon="@drawable/ic_feed_activity"
        android:title="@string/notifications"
        app:showAsAction="ifRoom"/>

    <item
        android:icon="@drawable/ic_feed_compose"
        android:title="@string/add_post"
        app:showAsAction="always">

        <menu>
            <item android:id="@+id/add_post_text"
                android:title="@string/text_post" />
            <item android:id="@+id/add_post_camera"
                android:title="@string/camera_post" />
            <item android:id="@+id/add_post_gallery"
                android:title="@string/gallery_post" />
        </menu>
    </item>

</menu>