<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/clear_chat"
        android:title="@string/clear_chat"
        app:showAsAction="never"/>

    <item
        android:id="@+id/block"
        android:title="@string/block"
        app:showAsAction="never"/>

    <item
        android:id="@+id/verify"
        android:title="@string/view_safety_number"
        app:showAsAction="never"
        android:visible="false"
        />
    <item
        android:id="@+id/call_voice"
        android:title="@string/call_action_voice"
        app:showAsAction="ifRoom"
        app:iconTint="@color/secondary_text_button_color_selector"
        android:icon="@drawable/ic_call"
        android:visible="false"
        />

    <item
        android:id="@+id/call_video"
        android:title="@string/call_action_video"
        app:showAsAction="ifRoom"
        app:iconTint="@color/secondary_text_button_color_selector"
        android:icon="@drawable/ic_video_call_button"
        android:visible="false"
        />

</menu>
