<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/reply"
        android:icon="@drawable/ic_action_reply"
        android:title="@string/reply"
        app:showAsAction="always"/>

    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_action_delete"
        android:title="@string/delete"
        app:showAsAction="always"/>

    <item
        android:id="@+id/forward"
        android:icon="@drawable/ic_action_forward"
        android:title="@string/forward_title"
        app:showAsAction="always"/>

    <item
        android:id="@+id/copy"
        android:icon="@drawable/ic_copy"
        android:title="@string/copy"
        app:showAsAction="ifRoom"/>
</menu>
