<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.halloapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_groups"
        android:name="com.halloapp.ui.groups.GroupsFragment"
        android:label="@string/title_groups"
        tools:layout="@layout/fragment_chats" />

    <fragment
        android:id="@+id/navigation_magic_posts"
        android:name="com.halloapp.ui.MagicPostFragment"
        android:label="@string/title_magic_post"
        tools:layout="@layout/fragment_magic_post" />

    <fragment
        android:id="@+id/navigation_messages"
        android:name="com.halloapp.ui.chats.ChatsFragment"
        android:label="@string/title_messages"
        tools:layout="@layout/fragment_chats" />

    <fragment
        android:id="@+id/navigation_activity"
        android:name="com.halloapp.ui.ActivityCenterFragment"
        android:label="@string/activity"
        tools:layout="@layout/fragment_profile" />
</navigation>
