<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item android:id="@+id/menu_search"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        tools:ignore="AlwaysShowAction" />

    <item android:id="@+id/menu_clear"
        android:title="@string/action_clear_search"
        android:icon="@drawable/ic_close"
        app:showAsAction="always"/>

    <item
        android:id="@+id/refresh_contacts"
        android:title="@string/refresh_contacts"
        app:showAsAction="never"/>

    <item
        android:id="@+id/invite_friends"
        android:title="@string/invite_friends"
        app:showAsAction="never"/>

</menu>
