<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.halloapp.widget.HAPreferenceCategory app:title="@string/settings_privacy">

        <Preference app:key="feed_privacy"
            app:title="@string/settings_feed_privacy"
            app:summary=" "/>

        <Preference app:key="block_list"
            app:title="@string/settings_block_list"
            app:summary=" "/>

    </com.halloapp.widget.HAPreferenceCategory>

    <com.halloapp.widget.HAPreferenceCategory app:key="debug" app:title="Debug" app:isPreferenceVisible="false">

        <SwitchPreferenceCompat
            app:key="use_debug_host"
            app:title="Use debug host"
            app:defaultValue="@bool/isDebug"/>

        <Preference
            app:key="debug_menu"
            app:title="DEBUG MENU"/>

        <Preference
            app:key="debug_config"
            app:title="Debug Config"/>

    </com.halloapp.widget.HAPreferenceCategory>

</PreferenceScreen>
