<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="40dp"
    android:background="@color/window_background">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/social_media_notification" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/social_media_nux_title"
        android:textSize="26sp"
        android:textStyle="bold"
        android:gravity="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="15dp"
        android:text="@string/social_media_nux_description"
        android:gravity="center"
        />

    <Button
        android:id="@+id/add_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/action_add"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:background="@drawable/rounded_entry_bg"
        app:backgroundTint="@color/favorites_dialog_blue" />

</LinearLayout>
