<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="40dp"
    android:background="@color/white">

    <ImageView
        android:id="@+id/contact_image"
        android:layout_width="70dp"
        android:layout_height="90dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_contacts_permission"
        app:tint="@color/color_secondary_70_alpha" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/friendship_model_title"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:paddingStart="15dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/friendship_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="15dp"
        android:text="@string/friendship_model_description"
        android:gravity="center"
        />

    <Button
        android:id="@+id/continue_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/continue_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:background="@drawable/rounded_entry_bg"
        app:backgroundTint="@color/favorites_dialog_blue"
        />

</LinearLayout>
